// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`common AJAX request 1`] = `
<div
  onClick={[Function]}
>
  loading
</div>
`;

exports[`common AJAX request 2`] = `
<div
  onClick={[Function]}
>
  test
</div>
`;

exports[`common AJAX request 3`] = `
<div
  onClick={[Function]}
>
  error
</div>
`;

exports[`default state updater 1`] = `
<div
  onClick={[Function]}
>
  <div>
    1
  </div>
</div>
`;

exports[`setState effect 1`] = `
<div
  onClick={[Function]}
>
  <div>
    2
  </div>
  <div>
    true
  </div>
</div>
`;

exports[`useFetch helper 1`] = `
<div
  onClick={[Function]}
>
  <div>
    empty
  </div>
  <div>
    complete
  </div>
</div>
`;

exports[`useFetch helper 2`] = `
<div
  onClick={[Function]}
>
  <div>
    leisure life
  </div>
  <div>
    complete
  </div>
</div>
`;

exports[`useFetch helper 3`] = `
<div
  onClick={[Function]}
>
  <div>
    error
  </div>
  <div>
    complete
  </div>
</div>
`;
